Popup horizontal alignment corrected

--- a/styles/AboutPopup.css
+++ b/styles/AboutPopup.css
@@ -9,6 +9,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    box-sizing: border-box;
     background-color: var(--popup-overlay);
     display: flex;
     justify-content: center;
